# prototurtle_rs

./: .gitignore  Cargo.toml  README.md  Rocket.toml  coords.json  protu.lua
positions/: 10.nav  11.nav  12.nav  18.nav  19.nav  20.nav  21.nav  4.nav  9.nav
shapes/: rotated_puppet.mtl
src/: cmd.rs  entry.rs  floor.rs  inventory.rs  lib.rs  main.rs  nav.rs  scripts.rs  server.rs  turtle.rs  turtle_core.rs
src/multi_builder/: mod.rs
src/scripts/: chunk_digger.rs  silly_builder.rs
src/scripts/model_builder/: generation.rs  mod.rs  runtime.rs
src/single_builder/: control.rs  mod.rs  simple_searcher.rs
src/turtle_core/: control.rs  data.rs  file_system_storage.rs  inventory.rs  navigation.rs
