[package]
name = "prototurtle_rs"
version = "0.1.0"
edition = "2021"
authors = ["Sean McConnachie <seanjulian.mcc@gmail.com>"]

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] } 
serde = { version = "1.0", features = ["derive"]}
tokio = { version = "1.27.0", features = ["full"] }
once_cell = "1.7.0"
anyhow = "1.0"
